$Id$

version 1.11.5 Ishkur (2009-01-24):

  - changed Smarty's homepage address to http://www.smarty.net (alec)
  - added Configuration -> States and possibility to search customers
    by country state in Customers/Search and filter them in 
    Customers/Reports/Customers List (alec)
  - in short customer nodes list added possibility to change node's 
    warning flag and status (alec)
  - in short customer nodes list added online status icon 
    with status title (alec)
  - helpdesk: in tickets list added short nodes list popup (alec)
  - helpdesk: in ticket view added requestor's nodes list (alec)
  - trafficdbcompact: fixed warnings appearing where there are nodes without
    stats data (chilan)
  - userpanel: added lost helpdeskreply.html template (alec)
  - lms-sendinvoices: fixed SQL query (alec)
  - customersearch: fixed customer searching while state is unset (chilan)
  - customerwarn: fixed customer marking when we try to set message
    after searching customers (chilan)
  - we can filter tickets after coming to tickets list from welcome
    module (chilan)
  - trafficdbcompact: improved speed of removedeleted option (chilan)
  - added separate access rights for nodes/customers to groups assignment (alec)
  - cashimport: display duplicates as errors (alec)
  - mailing: optimized SQL query, network filter checks public addresses
    also (alec)
  - hosting: ergonomy fixes (chilan)
  - customernodesbox: we remember if nodes box is opened again (chilan)
  - Companies/Divisions (alec)
  - per-division configuration - removed [invoices] options: header, footer,
    cplace, default_author and [finances] option: account (alec)
  - removed finances/iban option, now mass-payments account is generated 
    automatic if account is short (8-20 chars) (alec)
  - performance: optimized LMS::GetCustomer calls using its 2nd argument (alec)
  - reload: we can see live output from reload script (Grzegorz Cichowski)
  - divisions: added ten and regon attributes (chilan)