@@ -67,6 +67,7 @@ newticket_notify = false
 to_words_short_version = false
 ticketlist_status = ""
 ewx_support = false
+invoice_check_payment = false
 
 [invoices]
 
